[tool.poetry]
name = "pyexotel"
version = "0.1.0"
description = "A Python wrapper for the Exotel API"
authors = ["Udit <udit@noorahealth.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
jinja2 = "3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
autopep8 = "^1.7.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.13.1"
sphinx-reload = "^0.2.0"
sphinx-material = "^0.0.35"
sphinx-autodoc-typehints = "^1.23.0"
ipdb = "^0.13.13"
sphinx = "^7.0.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
